--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -428,7 +428,7 @@
       <x>230</x>
       <y>490</y>
       <width>241</width>
-      <height>121</height>
+      <height>131</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -538,8 +538,8 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>90</y>
-       <width>121</width>
+       <y>100</y>
+       <width>101</width>
        <height>23</height>
       </rect>
      </property>
@@ -551,13 +551,68 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>70</y>
-       <width>121</width>
+       <y>80</y>
+       <width>101</width>
        <height>23</height>
       </rect>
      </property>
      <property name="text">
       <string>Crop</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxIndirectRendering">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>80</y>
+       <width>91</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Indirect</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_28">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>71</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Motionblur</string>
+     </property>
+    </widget>
+    <widget class="QSlider" name="generalMotionblur">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>70</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>180</number>
+     </property>
+     <property name="value">
+      <number>90</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="generalMotionblurText">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>70</y>
+       <width>41</width>
+       <height>21</height>
+      </rect>
      </property>
     </widget>
    </widget>
@@ -707,7 +762,7 @@
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>130</y>
+       <y>120</y>
        <width>61</width>
        <height>21</height>
       </rect>
@@ -720,13 +775,39 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>120</y>
        <width>71</width>
        <height>17</height>
       </rect>
      </property>
      <property name="text">
       <string>F/Second</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_29">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>140</y>
+       <width>71</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Subframes</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEditSubframes">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>140</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1</string>
      </property>
     </widget>
    </widget>
@@ -1144,7 +1225,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>620</y>
+      <y>630</y>
       <width>461</width>
       <height>71</height>
      </rect>
@@ -1234,8 +1315,8 @@
    <widget class="QOpenGLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>440</y>
+      <x>410</x>
+      <y>450</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -1333,7 +1414,7 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>58</width>
+       <width>101</width>
        <height>40</height>
       </rect>
      </property>
@@ -1356,8 +1437,8 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>410</y>
-      <width>111</width>
+      <y>420</y>
+      <width>121</width>
       <height>21</height>
      </rect>
     </property>
@@ -2310,6 +2391,70 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>checkBoxIndirectRendering</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>indirectRendering(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>395</x>
+     <y>601</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>241</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEditSubframes</sender>
+   <signal>textEdited(QString)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>subframes(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>130</x>
+     <y>470</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>241</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>generalMotionblurText</sender>
+   <signal>textEdited(QString)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>motionBlur(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>440</x>
+     <y>590</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>241</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>generalMotionblur</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>motionBlur(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>360</x>
+     <y>587</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>241</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -2366,5 +2511,9 @@
   <slot>addCamera()</slot>
   <slot>importFramelist()</slot>
   <slot>coordinateSystem(QString)</slot>
+  <slot>indirectRendering(bool)</slot>
+  <slot>motionBlur(QString)</slot>
+  <slot>subframes(QString)</slot>
+  <slot>motionBlur(int)</slot>
  </slots>
 </ui>
